--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,11 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-  media_folder: "static/images"
-  public_folder: "images"
+
+media_folder: "static/images"
+public_folder: "images"
+
+collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
     folder: "content/posts" # The path to the folder where the documents are stored
